# group7par

./: README.md
vision_to_waypoint_pkg/: package.xml  setup.cfg  setup.py
vision_to_waypoint_pkg/game_logic/: base_game.py  game_logic.py  gui_main.py
vision_to_waypoint_pkg/launch/: custom_waypoint_move_launch.py
vision_to_waypoint_pkg/server/: readme.md  requirements.txt  ur5e_hand_detection_clean.py  ur5e_web_server_debug.py
vision_to_waypoint_pkg/vision_to_waypoint_pkg/: arm_controller.py  go_home_node.py  go_to_hover_test.py  go_to_object.py  pick_action.py  test_move.py  waypoint_finder.py
vision_to_waypoint_pkg/vision_to_waypoint_pkg/data/: waypoints.json
vision_to_waypoint_pkg/yolo_testing/: live_camera_view.py  test_yolo_apriltag.py
vision_to_waypoint_pkg/yolo_testing/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
vision_to_waypoint_pkg/yolo_testing/log/: latest_build
